# beimeipush

./: .gitignore  ADD_USER_PROPERNOUN_FEATURE.md  Dockerfile  README.md  README_project.md  README_user_propernoun_optimization.md  allInOne.ipynb  comparison_entity_only_vs_split_embedding.md  featureEngineering.py  feature_engineering_walkthrough.ipynb  hosts  implement_better_filling.py  infer.py  model.pth  model.py  pyproject.toml  requirements.txt  requirements_1.txt  semantic_vs_memory_test.py  test_json_debug.py  train.py  train.sh
UniProcess-dev_tiny/templates/: README.md
config/: README.md  config.yml  data.yml  feat.yml  feature_importance.yml  infer.yml  model.yml  propernoun_stats.json  train.yml
data/: download_result.sql  new_user.sql  train.sql  train_test.sql  user.sql
doc/: MLP_GAUC_Analysis_Summary.md  README_feature_config.md  user_propernoun深度模型树模型重要性分析.md  快速参考指南.md  深度学习模型完整流程解析.md  项目技术文档.md  项目重构详解_基于UniProcess适配.md
env/UniProcess-dev_tiny/: README.md  demo.py  pyproject.toml
env/UniProcess-dev_tiny/templates/: demo_config.yml
env/UniProcess-dev_tiny/uniprocess/operations/: README.md  __init__.py  common_operations.py  constants.py  interaction_operations.py
logs/: feature_importance_20250528_204830.json  training_history_20250528_202658.json  user_split_20250528_202319.json  user_split_20250528_204345.json
scripts/: train.sh
src/: __init__.py  model.py  precompute_bert_embeddings.py  train.py  train_MLP.py
test/: LightGBM.py  MLP.py
utils/: download.py  download_optimized.py  dtypes.py  hdfs.py  preprocess.py  vector_db.py
(+67 files in other folders)
